--- a/package.json
+++ b/package.json
@@ -8,16 +8,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/slider": "^4.3.2",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.3.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.2",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
     "expo": "~46.0.16",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "native-base": "^3.4.18",
+    "native-base": "^3.4.19",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-pager-view": "^6.0.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "^3.18.2",
     "react-native-svg": "12.3.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.3.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
